--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5574,3 +5574,33 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	Volume = {24},
 	Year = {2018},
 	Bdsk-Url-1 = {https://doi.org/10.1515/mcma-2018-2023}}
+
+@Article{h-phiEntropyDifferentialMetric1997,
+	author  = {M. L. Men\'endez and D. Morales and L. Pardo and M. Salicr\'u},
+	journal = {Applications of Mathematics},
+	pages   = {81--98},
+	title   = {($h$-$\phi$)-entropy differential metric},
+	volume  = {42},
+	year    = {1997},
+	number  = {2},
+}
+
+@Article{salicruetal1993,
+	Title                    = {Asymptotic Distribution of ($h,\phi$)-Entropy},
+	Author                   = {Salicr\'u, M. and Mend\'endez, M. L. and Pardo, L.},
+	Journal                  = {Communications in Statistics - Theory Methods},
+	Pages                    = {2015--2031},
+	Volume                   = {22},
+	Year                     = {1993},
+	Number                   = {7}
+}
+
+
+@Unpublished{NonparametricEntropyEstimationanOverview,
+	author = {J. Beirlant and E. J. Dudewicz and L. Gy{\"o}rfi and E. C. van der Meulen},
+	title  = {Nonparametric entropy estimation: an overview},
+	year   = {1996},
+	file   = {:art96_pdf/NonparametricEntropyEstimationanOverview.pdf:PDF},
+	url    = {https://www.researchgate.net/profile/Jan_Beirlant/publication/243768404_Nonparametric_Entropy_Estimation_An_Overview/links/0046352937863d9023000000/Nonparametric-Entropy-Estimation-An-Overview.pdf},
+}
+
